# agentic-sdlc-intake-attack

./: .gitignore  AGENTIC_SDLC_INTAKE_POLICY.md  ARTIFACTS.md  DETECTION_RULES.md  INCIDENT_THREAT_SURFACE.md  IOCS.md  Makefile  README.md  SAFE_PUBLICATION.md  STATIC_ANALYSIS.md  TIMELINE.md  pyproject.toml
.decapod/: config.toml
.decapod/governance/: plan.json
analysis/: Dockerfile  README.md  writeup.md
artifacts/: README.md
docs/: README.md
docs/assets/: README.md
docs/assets/css/: style.css
docs/notebooks/: 00-analysis-map-and-safety-boundary.html  01-artifact-metadata-and-checksums.html  02-static-pe-feature-analysis.html  03-evidence-boundary-and-claims.html  04-deep-pe-dissection.html  README.md  index.html
fixtures/: README.md  artifact-metadata.public.json  claims-classification.public.json  detailed-pe-dissection.public.json  harmless-artifact-manifest.json  static-pe-features.public.json
notebooks/: 00-analysis-map-and-safety-boundary.ipynb  01-artifact-metadata-and-checksums.ipynb  02-static-pe-feature-analysis.ipynb  03-evidence-boundary-and-claims.ipynb  04-deep-pe-dissection.ipynb  README.md
scratch/: populate_specs.py
screenshots/: README.md
scripts/: build-public-notebooks.py  check-public-safety.sh  check_archive_paths.py  dissect_pe.py  hash_artifact.sh  list_archive.sh  render-notebooks.sh  static_strings.sh  write-notebook-index.py
tools/: README.md
