[project]
name = "agentic-sdlc-intake-attack-forensic-notebooks"
version = "0.1.0"
description = "Safe static-analysis forensic notebooks for the Agentic Collaboration-Plane Injection incident"
requires-python = ">=3.12"
dependencies = [
  "ipykernel==7.3.0",
  "jupyterlab==4.5.8",
  "nbconvert==7.17.1",
  "nbformat==5.10.4",
]

[tool.uv]
package = false
environments = ["sys_platform == 'linux'"]
